# rlvr-intro

./: CLAUDE.md  README.md  pyproject.toml
.streamlit/: config.toml
app/: chart_theme.py  main.py  styles.css
app/components/: __init__.py  eyebrow.py  loader.py  takeaway.py  training_curve.py  verifier_card.py
app/pages/: 00_intro.py  01_bond_pricing.py  02_trade_signals.py  03_filing_reasoning.py  04_recap.py
examples/01_bond_pricing/: data.py  verifier.py
examples/02_trade_signals/: data.py  naive_verifier.py  triangular_verifier.py
examples/03_filing_reasoning/: data.py  verifier.py
homework/: README.md  simulator.py  solution.py  verifier_starter.py
rlvr_finance_explainer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
